  * Support IPv6 if available. (Can force off with configure --disable-ipv6)
  * If a hostname resolves to multiple ip addresses, try as many as needed to find one that works.
  * Add NGETRC environment variable to specify alternate config file directly.

2003-12-27 v0.26:
  * Add simplest possible example to manpage.
  * Don't use __attribute__ on non-GNU compilers.
  * Fix bug in knapsack algorithm that in some cases could cause a sub-optimal set of par2 files to be retrieved(or an assertion error on debug builds.)
  * Patched uulib to fix problem with long headers causing duplicate output in text files. (Patch also at http://nget.sf.net/patches/uulib-0.5.19-uuinfofile-long-headers.patch)
  * Fix memleak in goodgetcwd with long paths.
  * Fix goodgetcwd error handling.
  * Rewrite of config file code, all config values are error checked now, and unknown entries (typos) are warned about.
  * Some code cleanups and restructuring.
  * Add --fullxover arg to override config file fullxover settings.
  * Libpopt build calls poptReadDefaultConfig to allow alias usage. (add lines to ~/.popt containing "nget alias <new option> <options>")
  * -? is no longer used to show help since it conflicts with getopt's error value.  Run nget with no args or with --help instead.
  * Errors converting regex to wildmat cause "user" error status rather than fatal error status.
  * Better handling of 400 response code.

2003-11-20 v0.25:
  * Allow the same server id to be used for multiple hosts to share header cache data. (Useful if you have multiple accounts on the same server.)
  * Don't print extraneous exception information on tcp errors.
  * Also look for getopt_long in libgnugetopt.  (But you probably need --with-gnugetopt-prefix=/usr/local for it to be found.)
  * Properly handle par2 files with the first packet(s) damaged.
  * Give incomplete par/par2 files less weight when choosing which to get.
  * Consider incomplete par2 files even if -i isn't specified.